; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_mv88e1xxx.c_mv88e1xxx_set_loopback.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/chelsio/extr_mv88e1xxx.c_mv88e1xxx_set_loopback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cphy = type { i32 }

@MII_BMCR = common dso_local global i32 0, align 4
@BMCR_LOOPBACK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cphy*, i32)* @mv88e1xxx_set_loopback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv88e1xxx_set_loopback(%struct.cphy* %0, i32 %1) #0 {
  %3 = alloca %struct.cphy*, align 8
  %4 = alloca i32, align 4
  store %struct.cphy* %0, %struct.cphy** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load %struct.cphy*, %struct.cphy** %3, align 8
  %9 = load i32, i32* @MII_BMCR, align 4
  %10 = load i32, i32* @BMCR_LOOPBACK, align 4
  %11 = call i32 @mdio_set_bit(%struct.cphy* %8, i32 %9, i32 %10)
  br label %17

12:                                               ; preds = %2
  %13 = load %struct.cphy*, %struct.cphy** %3, align 8
  %14 = load i32, i32* @MII_BMCR, align 4
  %15 = load i32, i32* @BMCR_LOOPBACK, align 4
  %16 = call i32 @mdio_clear_bit(%struct.cphy* %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %12, %7
  ret i32 0
}

declare dso_local i32 @mdio_set_bit(%struct.cphy*, i32, i32) #1

declare dso_local i32 @mdio_clear_bit(%struct.cphy*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
